# grants-mcp

./: .dockerignore  .env.example  .gitignore  ACADEMIC_USE_CASE_SHOWCASE.md  CLAUDE.md  CLOUD_DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  Dockerfile  Makefile  PHASE3_IMPLEMENTATION_REPORT.md  README.md  README_PYTHON.md  ROADMAP.md  USER_ONBOARDING.md  docker-compose.yml  jest.config.js  main.py  mcp_compatible_server.py  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  test_basic.py
.claude/commands/: prime.md
.github/workflows/: adaptive-qa.yml  deploy.yml  parallel-testing.yml  simple-test.yml
ai_docs/: mcp_python_sdk.md  mcp_ts_sdk.md
claude_desktop_configs/: config_both.json  config_local_docker.json  config_local_stdio.json
scripts/: debug_connection.sh  run_comprehensive_tests.py  switch_claude_config.sh  test_http_local.py  test_http_no_docker.py  validate_deployment.py
specs/: mcp_design_spec.md  migration.md  poc_init.md  resource_workaround.md  testing_v2.md  testing_v3.md  usage.md
src/: index.ts
src/mcp_server/: server.py
src/mcp_server/config/: settings.py
src/mcp_server/models/: analytics_schemas.py  grants_schemas.py
src/mcp_server/tools/analytics/: __init__.py  grant_match_scorer_tool.py  hidden_opportunity_finder_tool.py  scoring_engine.py  (+1 more)
testing/: __init__.py  cli.py  config.py
testing/agents/: __init__.py  orchestrator.py
testing/audit/: __init__.py  trail_manager.py
testing/compliance/: __init__.py  checker.py
testing/generators/: __init__.py  test_generator.py
testing/risk/: __init__.py  risk_analyzer.py
tests/: .env.test  PARALLEL_TESTING_GUIDE.md  PHASE2_TESTING_GUIDE.md  TESTING_GUIDE.md  conftest.py  test_basic.py  test_discovery_tools.py  test_discovery_tools_api.py  test_funding_trends_fix.py  test_import.py  test_interactive.py  test_mcp_direct.py  test_mcp_stdio.py
tests/contract/: test_api_contracts.py
tests/edge_cases/: test_error_scenarios.py
tests/integration/: test_opportunity_discovery.py
tests/live/: test_live_discovery.py  test_real_world_scenarios.py
tests/performance/: test_concurrent_operations.py
tests/typescript/: setup.ts  test_grants_mcp.test.ts
tests/unit/: test_analytics_scoring.py  test_cache_manager.py
(+16 files in other folders)
